# cg-assignment-2019

./: .gitignore  README
docs/: make_report.sh  report.md
game/: .CMakeLists.txt.swp  CMakeLists.txt
game/cmake/modules/: FindGLFW3.cmake
game/include/glad/: glad.h
game/src/: .game.c.swp  box.c  box.h  camera.c  camera.h  file.c  file.h  game.c  game.h  glad.c  graphics.c  graphics.h  hashtable.c  hashtable.h  list.c  list.h  log.c  log.h  macros.h  material.c  material.h  models.c  models.h  shader.c  shader.h  texture.c  texture.h
game/src/shaders/: shader.fs  shader.vs
